# agent-smith-ai

./: .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  conf.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  qc.yml
.streamlit/: config.toml
docs/: conf.py
docs.back/: Makefile  conf.py  index.rst  modules.rst
docs.back/_build/doctrees/: environment.pickle  index.doctree
docs.back/_build/html/: .buildinfo  agent_smith_ai.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs.back/_build/html/.doctrees/: agent_smith_ai.doctree  environment.pickle  modules.doctree
docs.back/_build/html/_sources/: agent_smith_ai.rst.txt
docs/source/: conf.py  index.rst
examples/: agent_server.py  bash_agent.py  monarch_agent.py  monarch_basic.py  monarch_cli.py  streamlit_app.py  streamlit_server.py
src/agent_smith_ai/: __init__.py  cli_agent.py  models.py  streamlit_server.py  token_bucket.py  utility_agent.py
src/agent_smith_ai/bash_agent/: main.py
src/agent_smith_ai/bash_agent/agent/: bashai_agent.py
src/agent_smith_ai/bash_agent/config/: init.py  profiles.py
src/agent_smith_ai/bash_agent/utils/: conversation_log.py
src/agent_smith_ai/webapp/: AgentServer.py  Makefile
src/agent_smith_ai/webapp/frontend/: Makefile
src/agent_smith_ai/webapp/frontend/src/: App.css  App.js
src/monarch_assistant/: api.py  cli.py  cli_agent.py  main.py  models.py  openapi_wrapper.py  safe_eval_tools.py  tool_agent.py  utility_agent.py  utils.py
src/monarch_assistant/static/: hi.txt
tests/: __init__.py  test_agent.py  test_endpoints.py  test_schema_conversions.py
webapp/: main.py
webapp/frontend/: package-lock.json  package.json
webapp/frontend/src/: App.css  App.js
