[tool.poetry]
name = "monarch-assistant"
version = "0.0.0"
description = "monarch-assistant"
authors = ["Shawn T. O'Neil <shawn@tislab.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
importlib-metadata = "^4.8.0"
fastapi = "^0.95.2"
pytest = "^7.3.1"
httpx = "^0.24.1"
openai = "^0.27.7"
asteval = "^0.9.29"
python-dotenv = "^1.0.0"
rich = "^13.4.2"
colorama = "^0.4.6"
prompt-toolkit = "^3.0.38"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=7.1.2", optional = true}
tox = {version = ">=3.25.1", optional = true}
sphinx = {version = ">=6.1.3", optional = true}
sphinx-rtd-theme = {version = ">=1.0.0", optional = true}
sphinx-autodoc-typehints = {version = ">=1.2.0", optional = true}
sphinx-click = {version = ">=4.3.0", optional = true}
myst-parser = {version = ">=0.18.1", optional = true}

[tool.poetry.scripts]
monarch-assistant = "monarch_assistant.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]
tests = ["pytest", "tox"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
