[tool.poetry]
name = "agent_smith_ai"
version = "0.14.0"
description = "agent-smith-ai"
authors = ["Shawn T. O'Neil <shawn@tislab.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
click = "*"
importlib-metadata = "^4.8.0"
pytest = "^7.3.1"
httpx = "^0.24.1"
openai = "^0.27.7"
asteval = "^0.9.29"
python-dotenv = "^1.0.0"
rich = "^13.4.2"
colorama = "^0.4.6"
prompt-toolkit = "^3.0.38"
docstring-parser = "^0.15"
tiktoken = "^0.4.0"
pydantic = "^2.1.1"
sphinx-rtd-theme = "1.3.0rc1"
autodoc-pydantic = "^2.0.1"
sphinx-autodoc-typehints = "^1.24.0"
twine = "^4.0.2"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
websockets = "^11.0.3"
streamlit = "^1.26.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=7.1.2", optional = true}
tox = {version = ">=3.25.1", optional = true}
sphinx-autodoc-typehints = {version = ">=1.2.0", optional = true}
myst-parser = {version = ">=0.17.1", optional = true}
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.extras]
tests = ["pytest", "tox"]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
